--- a/css files/project.css
+++ b/css files/project.css
@@ -430,7 +430,6 @@
   padding: 0;
 }
 
-
 #what-i-do {
   color: var(--main-theme);
   text-shadow: 1px 0 0 whitesmoke;
@@ -458,17 +457,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1px;
   width: 100%;
   height: 100%;
   overflow-y: auto;
-}
-
-@media screen and (max-width: 722px) {
-  #main-list {
-    padding: 10%;
-  }
 }
 
 .paragraph-cards {
